Fix layout bugs by removing unnecessary width property
The removal of the `width: 100vw` property from the `.App` class resolves layout issues, particularly in viewports with varying dimensions. This change helps ensure consistent and expected behavior across different screen sizes.

--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -4,9 +4,7 @@
     align-items: center;
     justify-content: center;
     gap: 25px;
-
     height: 100vh;
-    width: 100vw;
 }
 .navigation {
     display: flex;
